@@ -410,8 +410,10 @@ CGUISettings::CGUISettings(void)
   AddSeparator(5, "VideoPlayer.Sep2");
   AddInt(6, "VideoPlayer.RenderMethod", 13354, RENDER_HQ_RGB_SHADER, RENDER_LQ_RGB_SHADER, 1, RENDER_HQ_RGB_SHADER, SPIN_CONTROL_TEXT);
   AddBool(7, "VideoPlayer.UseGUIResolution", 495, true);
-  AddSeparator(8, "VideoPlayer.Sep3");
-  AddBool(9, "VideoPlayer.UseTimeBasedSeeking", 13386, false);
+  AddBool(8, "VideoPlayer.FieldSync", 16004, false);
+  AddBool(9, "VideoPlayer.InvertFieldSync", 16005, false);
+  AddSeparator(10, "VideoPlayer.Sep3");
+  AddBool(11, "VideoPlayer.UseTimeBasedSeeking", 13386, false);
 
   AddCategory(5, "Subtitles", 287);
   AddString(1, "Subtitles.Font", 288, "arial-iso-8859-1", SPIN_CONTROL_TEXT);
